objects/ASI_CRM_Terms_Application__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Pre_Approval_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Approval Form</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Terms Applications</relationshipLabel>
        <relationshipName>Terms_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section_Title__c</fullName>
        <formula>ASI_CRM_Terms__r.ASI_CRM_Section_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section__c</fullName>
        <formula>ASI_CRM_Terms__r.ASI_CRM_Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Terms_Details__c</fullName>
        <label>Terms Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <filterItems>
                <field>ASI_CRM_Terms__c.ASI_TW_Apply_To__c</field>
                <operation>equals</operation>
                <value>PAF</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Terms__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Terms</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Terms__c.ASI_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Terms__c.ASI_CRM_Type__c</field>
                <operation>equals</operation>
                <value>Variable</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Terms__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>TW Terms</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Terms__c</referenceTo>
        <relationshipLabel>Terms Applications</relationshipLabel>
        <relationshipName>Terms_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Variable_Terms_Sequence__c</fullName>
        <inlineHelpText>To define the sequence of variable terms under the same section</inlineHelpText>
        <label>Variable Terms Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Terms Application</label>
    <nameField>
        <displayFormat>TA-{00000000}</displayFormat>
        <label>Terms Application No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms Applications</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Terms_Application</fullName>
        <active>true</active>
        <label>TW Terms Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>